@@ -1,9 +1,0 @@
-#!/bin/sh
-
-DIR=`realpath $0`
-cd `dirname $DIR`
-cd ../../sandbox
-./stop_all
-for a in 12345 ; do
-   ./make_sandbox $a
-done
