@@ -1,0 +1,18 @@
+DATABASE TABLE                     CHUNK HOST      ENGINE      COUNT         CHECKSUM TIME WAIT STAT  LAG
+mysql    columns_priv                  0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    db                            0 127.0.0.1 MyISAM          2         d3c84d2d    0 NULL NULL NULL
+mysql    func                          0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    help_category                 0 127.0.0.1 MyISAM         36         86921f8d    0 NULL NULL NULL
+mysql    help_keyword                  0 127.0.0.1 MyISAM        395         f263aa6b    0 NULL NULL NULL
+mysql    help_relation                 0 127.0.0.1 MyISAM        809         6152559b    0 NULL NULL NULL
+mysql    help_topic                    0 127.0.0.1 MyISAM        466         90ef1d0a    0 NULL NULL NULL
+mysql    host                          0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    proc                          0 127.0.0.1 MyISAM          6         1847e8f8    0 NULL NULL NULL
+mysql    procs_priv                    0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    tables_priv                   0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    time_zone                     0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    time_zone_leap_second         0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    time_zone_name                0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    time_zone_transition          0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    time_zone_transition_type     0 127.0.0.1 MyISAM          0             NULL    0 NULL NULL NULL
+mysql    user                          0 127.0.0.1 MyISAM          3         a4380032    0 NULL NULL NULL
