@@ -1,0 +1,15 @@
+#!/bin/sh
+
+if [ -z "$1" ]; then
+   echo "Must specify a slave to make!";
+   exit 1;
+fi
+
+DIR=`realpath $0`
+cd `dirname $DIR`
+./make_sandbox $1
+
+sleep 1;
+
+/tmp/$1/use -e "change master to master_host='127.0.0.1', master_log_file='mysql-bin.000001', master_log_pos=0, master_user='msandbox', master_password='msandbox', master_port=12345"
+/tmp/$1/use -e "start slave"
